# translator_api

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  ip_atual.py  test_app.py
translator/: app.py  schemas.py
